Fix css for z-index + Robo slab for title

--- a/source/sass/blocks/main-cooperation.scss
+++ b/source/sass/blocks/main-cooperation.scss
@@ -26,6 +26,7 @@
 
   .text--red {
     font-weight: 700;
+    font-family: "Roboto Slab";
     color: #ec343c;
   }
 
