--- a/source/sass/blocks/main-corporativ.scss
+++ b/source/sass/blocks/main-corporativ.scss
@@ -71,6 +71,7 @@
       position: absolute;
       top: -2px;
       right: 0;
+      z-index: 0;
 
       width: 100%;
       height: 160px;
@@ -137,6 +138,7 @@
   @include MD-reset();
 
   position: relative;
+  z-index: 1;
   // margin-top: 35px;
 
   font-weight: 400;
@@ -154,12 +156,15 @@
 .card-corporativ__description {
   @include MD-reset();
 
+  position: relative;
+  z-index: 1;
+
   max-width: 260px;
   margin-top: 18px;
 
   @media (max-width: $desktop) {
     position: relative;
-    z-index: 0;
+    z-index: 1;
 
     max-width: 200px;
 
